# WhatsMydB

./: .gitignore  AudioInfo.cpp  AudioTapper.cpp  AudioTapper.h  CMakeLists.txt  GetAudioDevice.cpp  GetAudioDevice.h  LICENSE  README.md  main.cpp
.github/workflows/: cmake-macos.yml
include/: RtAudio.cpp
media/: README.md  temp.drawio
src/: AudioInfo.cpp  AudioInfo.h  AudioTapper.cpp  AudioTapper.h  GetAudioDevice.cpp  GetAudioDevice.h  VirtualAudioDriver.cpp  VirtualAudioDriver.h
